welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: not found: value max
	if (max(a, b) == a)
            ^